// Vitest Snapshot v1

exports[`<EditTarget /> > should render 1`] = `
<Modal
  label="Edit Target"
  onEnter={[Function]}
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <TargetForm
        description="Bar description"
        errorName=""
        length={490}
        name="Bar"
        onChange={[Function]}
        required={true}
      />
    </Styled(styled.div)>
    <Styled(Component)>
      <Button
        color="blue"
        disabled={false}
        icon="save"
        tipPlacement="top"
        type="submit"
      >
        Submit
      </Button>
    </Styled(Component)>
  </form>
</Modal>
`;

exports[`<EditTarget /> > should render error when submitted without name 1`] = `
<Modal
  label="Edit Target"
  onEnter={[Function]}
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <TargetForm
        description="This is a test"
        errorName="Required field"
        length={310}
        name=""
        onChange={[Function]}
        required={false}
      />
    </Styled(styled.div)>
    <Styled(Component)>
      <Button
        color="blue"
        disabled={false}
        icon="save"
        tipPlacement="top"
        type="submit"
      >
        Submit
      </Button>
    </Styled(Component)>
  </form>
</Modal>
`;

exports[`<EditTarget /> > should update when TargetForm onChange() prop called 1`] = `
<Modal
  label="Edit Target"
  onEnter={[Function]}
  onHide={[MockFunction spy]}
  show={true}
>
  <ModalHeader>
    Edit Target
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Styled(styled.div)>
      <TargetForm
        description="Bar description"
        errorName=""
        length={490}
        name="Foo"
        onChange={[Function]}
        required={true}
      />
    </Styled(styled.div)>
    <Styled(Component)>
      <Button
        color="blue"
        disabled={false}
        icon="save"
        tipPlacement="top"
        type="submit"
      >
        Submit
      </Button>
    </Styled(Component)>
  </form>
</Modal>
`;
